# vAquila

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: docker-publish.yml  docs-pages.yml
docs/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs/docs/: cli-reference.md  getting-started-cpu-only.md  getting-started-gpu.md  getting-started.md  intro.md  public-beta.md  run-model-cli.md  run-model-webui.md  run-model.md  web-ui.md
docs/examples/ghcr/: .env.example  Dockerfile  README.md  docker-compose.yml
docs/examples/webui/: Dockerfile  README.md  docker-compose.yml
docs/src/css/: custom.css
docs/src/pages/: index.module.css  index.tsx
src/vaquila/: __init__.py  __main__.py  cli.py  cli_commands.py  cli_helpers.py  config.py  docker_service.py  exceptions.py  gpu.py  inference.py  models.py  webui.py
src/vaquila/commands/: __init__.py  cache.py  run.py  system.py  ui.py
src/vaquila/helpers/: __init__.py  cache.py  context.py  rebalance.py  runtime.py  startup.py  types.py
src/vaquila/webui_static/: app.js  index.html  styles.css
