[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "vaquila"
version = "0.1.0"
description = "CLI d'orchestration vLLM + Docker avec gestion GPU intelligente"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "vAquila contributors" }
]
dependencies = [
  "typer>=0.12.5",
  "docker>=7.1.0",
  "nvidia-ml-py>=12.560.30",
  "rich>=13.9.4"
]

[project.scripts]
vaq = "vaquila.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/vaquila"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
