[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "vaquila"
version = "0.1.0"
description = "CLI d'orchestration vLLM + Docker avec gestion GPU intelligente"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "vAquila contributors" }
]
dependencies = [
  "typer>=0.12.5",
  "docker>=7.1.0",
  "nvidia-ml-py>=12.560.30",
  "rich>=13.9.4",
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
  "huggingface_hub>=0.34.0"
]

[project.scripts]
vaq = "vaquila.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/vaquila"]

[tool.hatch.build.targets.wheel.force-include]
"src/vaquila/assets" = "vaquila/assets"
"src/vaquila/webui_static" = "vaquila/webui_static"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
